--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 <body>
     <div class="container"></div>
-    
+        <div id="calcContainer"></div>
+            <div class="displayContainer"></div>
+                <div class="calcDisplay"></div>
+            <div class="numContainer"></div>
+                <button id="oneBtn">1</button>
+                <button id="twoBtn">2</button>
+                <button id="threeBtn">3</button>
+                <button id="fourBtn">4</button>
+                <button id="fiveBtn">5</button>
+                <button id="sixBtn">6</button>
+                <button id="sevenBtn">7</button>
+                <button id="eightBtn">8</button>
+                <button id="nineBtn">9</button>
+                <button id="zeroBtn">0</button>
+            <div class="operatorsContainer"></div>
+                <button class="addBtn">+</button>
+                <button class="subtractBtn">-</button>
+                <button class="multiplyBtn">*</button>
+                <button class="divideBtn">/</button>
+                <button class="equalsBtn">=</button>
+                <button class="clearBtn">clear</button>
 
 
     
