--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container"></div>
-        <div id="calcContainer"></div>
-            <div class="displayContainer"></div>
+    <div class="container">
+        <div id="calcContainer">
+            <div class="displayContainer">
                 <div class="calcDisplay"></div>
-            <div class="numContainer"></div>
+            </div>
+            <div class="numContainer">
                 <button id="oneBtn">1</button>
                 <button id="twoBtn">2</button>
                 <button id="threeBtn">3</button>
@@ -23,6 +24,7 @@
                 <button id="eightBtn">8</button>
                 <button id="nineBtn">9</button>
                 <button id="zeroBtn">0</button>
+            </div>
             <div class="operatorsContainer"></div>
                 <button class="addBtn">+</button>
                 <button class="subtractBtn">-</button>
@@ -30,10 +32,9 @@
                 <button class="divideBtn">/</button>
                 <button class="equalsBtn">=</button>
                 <button class="clearBtn">clear</button>
-
-
-    
-    
+            </div>
+        </div>
+    </div>
     <script src="./calc.js"></script>
 </body>
 </html>
