--- a/index.html
+++ b/index.html
@@ -9,29 +9,31 @@
 </head>
 <body>
     <div class="container">
-        <div id="calcContainer">
+        <div class="calcContainer">
             <div class="displayContainer">
                 <div class="calcDisplay"></div>
             </div>
-            <div class="numContainer">
-                <button id="oneBtn">1</button>
-                <button id="twoBtn">2</button>
-                <button id="threeBtn">3</button>
-                <button id="fourBtn">4</button>
-                <button id="fiveBtn">5</button>
-                <button id="sixBtn">6</button>
-                <button id="sevenBtn">7</button>
-                <button id="eightBtn">8</button>
-                <button id="nineBtn">9</button>
-                <button id="zeroBtn">0</button>
-            </div>
-            <div class="operatorsContainer"></div>
-                <button class="addBtn">+</button>
-                <button class="subtractBtn">-</button>
-                <button class="multiplyBtn">*</button>
-                <button class="divideBtn">/</button>
-                <button class="equalsBtn">=</button>
-                <button class="clearBtn">clear</button>
+            <div id="numOpContainer">
+                <div class="numContainer">
+                    <button class="numBtn" id="oneBtn">1</button>
+                    <button class="numBtn" id="twoBtn">2</button>
+                    <button class="numBtn" id="threeBtn">3</button>
+                    <button class="numBtn" id="fourBtn">4</button>
+                    <button class="numBtn" id="fiveBtn">5</button>
+                    <button class="numBtn" id="sixBtn">6</button>
+                    <button class="numBtn" id="sevenBtn">7</button>
+                    <button class="numBtn" id="eightBtn">8</button>
+                    <button class="numBtn" id="nineBtn">9</button>
+                    <button class="numBtn" id="zeroBtn">0</button>
+                </div>
+                <div class="operatorsContainer">
+                    <button class="addBtn">+</button>
+                    <button class="subtractBtn">-</button>
+                    <button class="multiplyBtn">*</button>
+                    <button class="divideBtn">/</button>
+                    <button class="equalsBtn">=</button>
+                    <button class="clearBtn">clear</button>
+                </div>
             </div>
         </div>
     </div>
