Spaced out the UI.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                     <button class="numBtn" id="zeroBtn">0</button>
                 </div>
                 <div class="operatorsContainer">
-                    <button class="addBtn">+</button>
-                    <button class="subtractBtn">-</button>
-                    <button class="multiplyBtn">*</button>
-                    <button class="divideBtn">/</button>
-                    <button class="equalsBtn">=</button>
-                    <button class="clearBtn">clear</button>
+                    <button class="opBtn" id="addBtn">+</button>
+                    <button class="opBtn" id="subtractBtn">-</button>
+                    <button class="opBtn" id="multiplyBtn">*</button>
+                    <button class="opBtn" id="divideBtn">/</button>
+                    <button class="opBtn" id="equalsBtn">=</button>
+                    <button class="opBtn" id="clearBtn">clear</button>
                 </div>
             </div>
         </div>
