Added two new divs in the HTML file.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="container">
         <div class="calcContainer">
             <div class="displayContainer">
-                <div class="calcDisplay"></div>
+                <div class="calcDisplay">
+                    <div class="previousOperand"></div>
+                    <div class="currentOperand"></div>
+                </div>
             </div>
             <div id="numOpContainer">
                 <div class="numContainer">
