--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             </div>
             <div id="numOpContainer">
                 <div class="numContainer">
-                    <button class="numBtn" id="oneBtn">1</button>
-                    <button class="numBtn" id="twoBtn">2</button>
-                    <button class="numBtn" id="threeBtn">3</button>
-                    <button class="numBtn" id="fourBtn">4</button>
-                    <button class="numBtn" id="fiveBtn">5</button>
-                    <button class="numBtn" id="sixBtn">6</button>
-                    <button class="numBtn" id="sevenBtn">7</button>
-                    <button class="numBtn" id="eightBtn">8</button>
-                    <button class="numBtn" id="nineBtn">9</button>
-                    <button class="numBtn" id="zeroBtn">0</button>
+                    <button data-number>1</button>
+                    <button data-number>2</button>
+                    <button data-number>3</button>
+                    <button data-number>4</button>
+                    <button data-number>5</button>
+                    <button data-number>6</button>
+                    <button data-number>7</button>
+                    <button data-number>8</button>
+                    <button data-number>9</button>
+                    <button data-number>0</button>
                 </div>
                 <div class="operatorsContainer">
                     <button class="opBtn" id="addBtn">+</button>
