Replaced operator class/id selectors with data attributes.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                     <button data-number>0</button>
                 </div>
                 <div class="operatorsContainer">
-                    <button class="opBtn" id="addBtn">+</button>
-                    <button class="opBtn" id="subtractBtn">-</button>
-                    <button class="opBtn" id="multiplyBtn">*</button>
-                    <button class="opBtn" id="divideBtn">/</button>
+                    <button data-operation>+</button>
+                    <button data-operation>-</button>
+                    <button data-operation>*</button>
+                    <button data-operation>/</button>
                     <button class="opBtn" id="equalsBtn">=</button>
                     <button class="opBtn" id="clearBtn">clear</button>
                 </div>
