Added data-Attirbutes to the remaining buttons.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="calcContainer">
             <div class="displayContainer">
                 <div class="calcDisplay">
-                    <div class="previousOperand"></div>
-                    <div class="currentOperand"></div>
+                    <div data-previous-operand class="previousOperand"></div>
+                    <div data-current-operand class="currentOperand"></div>
                 </div>
             </div>
             <div id="numOpContainer">
@@ -34,8 +34,8 @@
                     <button data-operation>-</button>
                     <button data-operation>*</button>
                     <button data-operation>/</button>
-                    <button class="opBtn" id="equalsBtn">=</button>
-                    <button class="opBtn" id="clearBtn">clear</button>
+                    <button data-equals>=</button>
+                    <button data-clear>Clear</button>
                 </div>
             </div>
         </div>
