--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <button data-operation>/</button>
                     <button data-equals>=</button>
                     <button data-clear>Clear</button>
+                    <button data-delete>Delete</button>
                 </div>
             </div>
         </div>
