--- a/index.html
+++ b/index.html
@@ -17,27 +17,24 @@
                 </div>
             </div>
             <div id="numOpContainer">
-                <div class="numContainer">
-                    <button data-number>1</button>
-                    <button data-number>2</button>
-                    <button data-number>3</button>
-                    <button data-number>4</button>
-                    <button data-number>5</button>
-                    <button data-number>6</button>
-                    <button data-number>7</button>
-                    <button data-number>8</button>
-                    <button data-number>9</button>
-                    <button data-number>0</button>
-                </div>
-                <div class="operatorsContainer">
-                    <button data-operation>+</button>
-                    <button data-operation>-</button>
-                    <button data-operation>*</button>
-                    <button data-operation>/</button>
-                    <button data-equals>=</button>
-                    <button data-clear>Clear</button>
-                    <button data-delete>Delete</button>
-                </div>
+                <button id="clear" class="opBtn" data-clear>Clear</button>
+                <button class="opBtn" data-delete>Delete</button>
+                <button class="opBtn" data-operation>+</button>
+                <button class="numBtn" data-number>1</button>
+                <button class="numBtn" data-number>2</button>
+                <button class="numBtn" data-number>3</button>
+                <button class="opBtn" data-operation>-</button>
+                <button class="numBtn" data-number>4</button>
+                <button class="numBtn" data-number>5</button>
+                <button class="numBtn" data-number>6</button>
+                <button class="opBtn" data-operation>*</button>
+                <button class="numBtn" data-number>7</button>
+                <button class="numBtn" data-number>8</button>
+                <button class="numBtn" data-number>9</button>
+                <button class="opBtn" data-operation>/</button>
+                <button class="numBtn" data-number>.</button>
+                <button class="numBtn" data-number>0</button>
+                <button id="equals" class="opBtn" data-equals>=</button>
             </div>
         </div>
     </div>
